Make sure icon is positioned behind image but in front of map

--- a/style.css
+++ b/style.css
@@ -53,13 +53,15 @@ h4 {
 .playerIcon {
   position: absolute;
   transition: 1s;
+  z-index: 1;
 }
 
 #image {
+  position: absolute;
   width: 100%;
   height: 100%;
   border: 1px solid grey;
-  z-index: 999;
+  z-index: 10;
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: center;
